<resources>
    <string name="app_name">Countdown</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="days_abbr">d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="new_countdown">New countdown</string>
    <string name="name">Name</string>
    <string name="choose_date">Choose date</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="must_select_date">You must select a date before creating a countdown</string>
    <string name="must_select_name">You must select a name before creating a countdown</string>
    <string name="finished">Finished</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_countdown_title">Are you sure to delete the event?</string>
    <string name="exit_without_saving_title">Are you sure to go back without saving the event?</string>
    <string name="exit_without_saving_message">You will not be able to retrieve this event.</string>
    <string name="yes">Yes</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="no">No</string>
    <string name="no_countdowns">No countdowns.</string>
    <string name="there_are_no_countdowns">There are no countdowns 😔</string>
    <string name="choose_image">Choose image</string>
    <string name="operation_cancelled">Operation cancelled by user</string>
    <string name="additoinal_settings">Additional settings</string>
    <string name="set">Set</string>
    <array name="image_options">
        <item>Select photo from gallery</item>
        <item>Select colored wallpaper</item>
    </array>
    <string name="time_passed">Time passed:</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
</resources>
