<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        tools:context=".activities.NewCountdown">

    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
                                       android:layout_height="56dp"
                                       android:id="@+id/new_countdown_toolbar"
                                       app:title="@string/new_countdown"

                                       app:layout_constraintTop_toTopOf="parent"
                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent"
                                       app:layout_constraintBottom_toBottomOf="parent"
                                       app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
                                       app:layout_constraintVertical_bias="0.0">

    </androidx.appcompat.widget.Toolbar>


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            android:id="@+id/new_countdown_edit_icon"
            app:layout_constraintTop_toTopOf="@+id/new_countdown_edit_input"
            app:layout_constraintBottom_toBottomOf="@+id/new_countdown_edit_input"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/new_countdown_edit_input" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/new_countdown_toolbar" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_countdown_edit_icon" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <View
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp" android:layout_height="0.5dp" android:id="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/new_countdown_edit_input" android:layout_marginTop="16dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_today_black_24dp"
            android:id="@+id/new_countdown_date_icon"
            app:layout_constraintTop_toTopOf="@+id/new_countdown_date_button"
            app:layout_constraintBottom_toBottomOf="@+id/new_countdown_date_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:backgroundTint="@color/md_white_1000"
            android:id="@+id/new_countdown_date_button"
            android:textColor="@color/primary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/new_countdown_date_icon"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="@font/montserrat_regular"


            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="1.0"
    />
    <View
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp" android:layout_height="0.5dp"
            android:id="@+id/viewSeparato2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/new_countdown_date_button"/>


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_black_24dp"
            android:id="@+id/new_countdown_image_icon"
            app:layout_constraintTop_toTopOf="@+id/new_countdown_image_button"
            app:layout_constraintBottom_toBottomOf="@+id/new_countdown_image_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:backgroundTint="@color/md_white_1000"
            android:id="@+id/new_countdown_image_button"
            android:textColor="@color/primary"
            style="?android:attr/borderlessButtonStyle"

            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/viewSeparato2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_countdown_image_icon"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="16dp"/>

    <View
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp" android:layout_height="0.5dp"
            android:id="@+id/viewSeparato3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/new_countdown_image_button"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_format_color_text_black_24dp"
            android:id="@+id/new_countdown_text_icon"
            app:layout_constraintTop_toTopOf="@+id/new_countdown_text_button"
            app:layout_constraintBottom_toBottomOf="@+id/new_countdown_text_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:backgroundTint="@color/md_white_1000"
            android:id="@+id/new_countdown_text_button"
            android:textColor="@color/primary"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="16dp"
            android:gravity="right|center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/viewSeparato3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_countdown_text_icon"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"/>

    <View
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp" android:layout_height="0.5dp"
            android:id="@+id/viewSeparato4"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/new_countdown_text_button"/>


    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSubmit"
            android:text="@string/add"
            android:textColor="@color/md_white_1000"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/new_countdown_submit_button"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/viewSeparato4"/>


</androidx.constraintlayout.widget.ConstraintLayout>