<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        android:theme="@style/AppTheme"
        tools:context=".activities.EditCountdown">

    <androidx.appcompat.widget.Toolbar android:layout_width="0dp"
                                       android:layout_height="56dp" android:id="@+id/edit_toolbar"
                                       app:layout_constraintTop_toTopOf="parent"
                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="746dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/edit_toolbar"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       app:layout_constraintBottom_toBottomOf="parent"
                                                       app:layout_constraintHorizontal_bias="1.0"
                                                       app:layout_constraintVertical_bias="0.0">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black_24dp"
                android:id="@+id/edit_name_icon"
                app:layout_constraintTop_toTopOf="@+id/edit_name_text"
                app:layout_constraintBottom_toBottomOf="@+id/edit_name_text"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
        />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:fontFamily="@font/montserrat_light"
                android:background="@null"
                android:id="@+id/edit_name_text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/edit_name_icon"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
        />
        <View
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                tools:layout_editor_absoluteX="0dp" android:layout_height="0.5dp"
                android:id="@+id/view2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_name_text"/>


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_date_icon"
                android:src="@drawable/ic_today_black_24dp"
                app:layout_constraintTop_toTopOf="@+id/edit_date_button"
                app:layout_constraintBottom_toBottomOf="@+id/edit_date_button"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_date_button"
                android:text="@string/choose_date"
                android:backgroundTint="@color/md_white_1000"
                android:textColor="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view2" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/edit_date_icon"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@android:color/darker_gray"

              tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/edit_date_button" android:id="@+id/view3"/>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/edit_image_icon"
                   android:src="@drawable/ic_image_black_24dp"
                   app:layout_constraintBottom_toBottomOf="@+id/edit_image_button"
                   app:layout_constraintTop_toTopOf="@+id/edit_image_button"
                   app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_image_button"
                android:text="@string/choose_image"
                android:backgroundTint="@color/md_white_1000"
                android:textColor="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view3" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/edit_image_icon"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@android:color/darker_gray"
              android:id="@+id/view4" tools:layout_editor_absoluteX="16dp" android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/edit_image_button"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_light_grey_24dp"
                android:id="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/edit_settings_button"
                app:layout_constraintBottom_toBottomOf="@+id/edit_settings_button"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_settings_button"
                android:text="@string/additoinal_settings"
                android:backgroundTint="@color/md_white_1000"
                android:textColor="@color/primary"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view4" app:layout_constraintStart_toEndOf="@+id/imageView2"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@android:color/darker_gray"
              android:id="@+id/view5" tools:layout_editor_absoluteX="16dp"
              app:layout_constraintTop_toBottomOf="@+id/edit_settings_button" android:layout_marginTop="16dp"/>


        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSubmit"
                android:text="@string/save"
                android:textColor="@color/md_white_1000"
                android:id="@+id/edit_save_button"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/view5"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>